--- a/ahpunjabfrontend/package.json
+++ b/ahpunjabfrontend/package.json
@@ -15,6 +15,7 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
+    "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.1",
     "react-leaflet": "^5.0.0",
     "tailwindcss": "^4.1.13"
