--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,11 +7,12 @@
   "type": "module",
   "main": "src/server.js",
   "scripts": {
-    "test": "node --test --watch",
-    "dev": "fastify start -w -c fastify.config.json src/server.js",
+    "predev": "npx kill-port 8080 || true",
+    "dev": "nodemon",
     "start": "fastify start -c fastify.config.json src/server.js"
   },
   "dependencies": {
+    "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.1.0",
     "@fastify/swagger": "^9.5.1",
     "@fastify/swagger-ui": "^5.2.3",
@@ -40,10 +41,12 @@
     "joycon": "^3.1.1",
     "json-schema-ref-resolver": "^2.0.1",
     "json-schema-traverse": "^1.0.0",
+    "jsonwebtoken": "^9.0.2",
     "light-my-request": "^6.6.0",
     "minimist": "^1.2.8",
     "on-exit-leak-free": "^2.1.2",
     "once": "^1.4.0",
+    "pg": "^8.16.3",
     "pino": "^9.10.0",
     "pino-abstract-transport": "^2.0.0",
     "pino-std-serializers": "^7.0.0",
@@ -70,6 +73,8 @@
   "devDependencies": {
     "fastify": "^5.6.0",
     "i": "^0.3.7",
+    "kill-port": "^2.0.1",
+    "nodemon": "^3.1.10",
     "npm": "^11.6.0",
     "pino-pretty": "^13.1.1"
   }
