--- a/Database/docker-compose.yml
+++ b/Database/docker-compose.yml
@@ -16,8 +16,9 @@ services:
       - ./init/01-schema.sql:/docker-entrypoint-initdb.d/01-schema.sql
       - ./init/02-seed.sql:/docker-entrypoint-initdb.d/02-seed.sql
       - ./init/03-villages-full.sql:/docker-entrypoint-initdb.d/03-villages-full.sql
-      # Persist data even when container stops
-      - postgres_data:/var/lib/postgresql/data
+      - ./init/04-test-users.sql:/docker-entrypoint-initdb.d/04-test-users.sql
+      # Comment out for dev to reseed every time, uncomment for production
+      # - postgres_data:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ahpunjab -d ahpunjab_db"]
       interval: 10s
