--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,6 +16,7 @@
     "@fastify/cors": "^11.1.0",
     "@fastify/swagger": "^9.5.1",
     "@fastify/swagger-ui": "^5.2.3",
+    "@simplewebauthn/server": "^13.2.2",
     "abstract-logging": "^2.0.1",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
