--- a/ahpunjabfrontend/package.json
+++ b/ahpunjabfrontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview --host"
   },
   "dependencies": {
+    "@simplewebauthn/browser": "^13.2.2",
     "@tailwindcss/vite": "^4.1.13",
     "@types/leaflet": "^1.9.20",
     "leaflet": "^1.9.4",
@@ -18,6 +19,7 @@
     "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.1",
     "react-leaflet": "^5.0.0",
+    "react-router-dom": "^7.9.4",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
