--- a/Database/docker-compose.yml
+++ b/Database/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - ./init/03-villages-full.sql:/docker-entrypoint-initdb.d/03-villages-full.sql
       - ./init/04-test-users.sql:/docker-entrypoint-initdb.d/04-test-users.sql
       - ./init/05-webauthn.sql:/docker-entrypoint-initdb.d/05-webauthn.sql
+      - ./init/06-refresh-tokens.sql:/docker-entrypoint-initdb.d/06-refresh-tokens.sql
       # Comment out for dev to reseed every time, uncomment for production 
       # - postgres_data:/var/lib/postgresql/data
       # Persist data even when container stops
