--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.1.0",
+    "@fastify/rate-limit": "^10.3.0",
     "@fastify/swagger": "^9.5.1",
     "@fastify/swagger-ui": "^5.2.3",
     "@simplewebauthn/server": "^13.2.2",
@@ -39,6 +40,7 @@
     "find-my-way": "^9.3.0",
     "help-me": "^5.0.0",
     "ipaddr.js": "^2.2.0",
+    "isomorphic-dompurify": "^2.29.0",
     "joycon": "^3.1.1",
     "json-schema-ref-resolver": "^2.0.1",
     "json-schema-traverse": "^1.0.0",
@@ -48,7 +50,7 @@
     "on-exit-leak-free": "^2.1.2",
     "once": "^1.4.0",
     "pg": "^8.16.3",
-    "pino": "^9.10.0",
+    "pino": "^9.13.1",
     "pino-abstract-transport": "^2.0.0",
     "pino-std-serializers": "^7.0.0",
     "process-warning": "^5.0.0",
@@ -69,6 +71,7 @@
     "strip-json-comments": "^5.0.3",
     "thread-stream": "^3.1.0",
     "toad-cache": "^3.7.0",
+    "validator": "^13.15.15",
     "wrappy": "^1.0.2"
   },
   "devDependencies": {
@@ -77,6 +80,6 @@
     "kill-port": "^2.0.1",
     "nodemon": "^3.1.10",
     "npm": "^11.6.0",
-    "pino-pretty": "^13.1.1"
+    "pino-pretty": "^13.1.2"
   }
 }
